isc-dhcp (4.1.1-P1-3) experimental; urgency=low

  * debian/rules: stop invoking dh_installinit with --noscripts so the
    update-rc.d stuff is done properly
  * debian/isc-dhcp-{relay,server}.{postinst,postrm}: remove calls to
    update-rc.d and invoke-rc.d, let dh_installinit handle it
  * debian/isc-dhcp-server.init.d: add a start-time dependency on $named
    (closes: #586035)

 -- Andrew Pollock <apollock@debian.org>  Tue, 15 Jun 2010 20:14:33 -0700

isc-dhcp (4.1.1-P1-2) experimental; urgency=low

  * debian/isc-dhcp-{server,relay}.init: go back to not mentioning any
    runlevels for Default-Stop
  * debian/isc-dhcp-server.postinst: don't specify any runlevels for stop
    scripts when invoking update-rc.d

 -- Andrew Pollock <apollock@debian.org>  Mon, 07 Jun 2010 19:41:25 -0700

isc-dhcp (4.1.1-P1-1) experimental; urgency=low

  * New Upstream Version
    - Fix for fencepost error on zero-length client identifier
    - CVE-2010-2156
    - VU#541921
  * debian/isc-dhcp-{server,relay}.init: adjust Default-Stop to match
    invocation of update-rc.d in postinst to avoid warning from update-rc.d

 -- Andrew Pollock <apollock@debian.org>  Mon, 07 Jun 2010 09:41:34 -0700

isc-dhcp (4.1.1-3) experimental; urgency=low

  * debian/control: don't make the new packages conflict with the
    old/transitional packages

 -- Andrew Pollock <apollock@debian.org>  Sun, 06 Jun 2010 20:01:22 -0700

isc-dhcp (4.1.1-2) experimental; urgency=low

  * debian/control: make dhcp3-* packages match what the override file says
  * debian/rules: DHCPv6 support builds now, stop disabling (closes: #549060)
  * debian/README.Debian: stop mentioning DHCPv6 is disabled

 -- Andrew Pollock <apollock@debian.org>  Fri, 04 Jun 2010 10:46:42 -0700

isc-dhcp (4.1.1-1) experimental; urgency=low

  * New Upstream Version
  * Re-add LDAP patches
  * debian/control: bump Standards-Version (no changes)
  * debian/isc-dhcp-server.init.d: don't mention any runlevels for Default-Stop
